# rust_game_godot_i_o_layer

./: README.md
game_core/: Cargo.toml
game_core/core/: Cargo.toml
game_core/core/src/: components.rs
game_core/game/: Cargo.toml
game_core/game/src/: lib.rs
game_core/math/: Cargo.toml
game_core/math/src/: lib.rs
game_core/physics/: Cargo.toml
game_core/physics/src/: components.rs  systems.rs
game_core/src/: lib.rs
godot_view/: Game.tscn  game_core.gdnlib  hello_world.gdns  project.godot
