[package]
name = "game_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "core",
    "math",
    "physics",
    "game",
]

[dependencies]
gdnative = "0.9.3"
game = { path = "./game" }
physics = { path = "./physics" }

[lib]
crate-type = ["cdylib"]